--- a/learnHTMLForms/styles.css
+++ b/learnHTMLForms/styles.css
@@ -6,4 +6,7 @@
 body {
     width: 100%;
     height: 100vh;
+    /*Step 9*/
+    /*Now, get rid of the horizontal scroll-bar, by setting the body default margin added by some browsers to 0.*/
+    margin: 0;
 }
